--- a/art.css
+++ b/art.css
@@ -59,10 +59,13 @@
 
 /* Styling for the article text */
 .article-text {
-    font-size: 16px;
-    margin-top: 10px;
+    font-size: 18px;
+    line-height: 2.0;
+    text-indent: 2em;
+    margin-bottom: 30px;
     font-family: "Georgia", serif;
-    color: #777;
+    color: #333;
+    text-align: justify;
 }
 
 .article-container {
