--- a/art.css
+++ b/art.css
@@ -75,8 +75,8 @@
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-family: "Georgia", serif;
 }
-
 /* Styling for the article image */
 .article-image {
     width: 100%;
@@ -91,11 +91,13 @@
 
 /* Styling for the article title */
 .article-title {
-    font-size: 24px;
+    font-size: 32px;
     margin-top: 20px;
+    margin-bottom: 10px;
     font-family: "Cheltenham", serif;
     text-align: center;
 }
+
 
 /* Styling for the article text container */
 .article-text-container {
@@ -106,9 +108,14 @@
 .article-text {
     font-size: 18px;
     line-height: 4.0;
-    text-indent: 2em;
-    margin-bottom: 30px;
-    font-family: "Georgia", serif;
     color: #333;
     text-align: justify;
+    text-indent: 3em; /* Add indentation to the paragraphs */
+    margin-bottom: 30px; /* Add spacing between paragraphs */
+}
+
+.article-byline {
+    font-size: 16px;
+    color: #666;
+    text-align: center;
 }
