--- a/main.css
+++ b/main.css
@@ -46,11 +46,14 @@ body {
 
 /* Logo styles */
 /* Logo styles */
+/* Logo styles */
 .logo {
     display: inline-block;
     vertical-align: middle;
-    max-width: 30px; /* Adjust the width as needed */
+    max-width: 70px;
+    max-height: 40px;
 }
+
 
 
 /* Article styles */
