--- a/main.css
+++ b/main.css
@@ -74,14 +74,14 @@ body {
 .subject-tab:hover {
     background-color: #ddd;
 }
-
+/*
 .logo {
     display: inline-block;
     vertical-align: middle;
     max-width: 70px;
     max-height: 40px;
 }
-
+*/
 /*
 .logo {
     display: inline-block;
