--- a/main.css
+++ b/main.css
@@ -10,31 +10,27 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
 }
+
+/* Header styles */
 .header {
     background-color: #333;
     color: white;
-    padding: 10px 0;
+    padding: 20px 0;
     text-align: center;
-    font-size: 24px;
-    margin-bottom: 20px;
 }
-
 
 .header h1 {
     font-size: 36px;
     margin-bottom: 10px;
 }
 
-
-
-
+/* Subject tabs */
 .subject-tabs {
     background-color: #444;
     display: flex;
     justify-content: space-around;
     padding: 10px 0;
 }
-
 
 .subject-tab {
     color: white;
@@ -48,23 +44,11 @@ body {
     background-color: #555;
 }
 
-
+/* Logo styles */
 .logo {
     display: inline-block;
     vertical-align: middle;
-    max-width: 70px;
-    max-height: 40px;
 }
-
-/*
-.logo {
-    display: inline-block;
-    vertical-align: middle;
-    max-width: 100px;
-    max-height: 40px;
-}
-*/
-
 
 /* Article styles */
 .articles {
