--- a/art.css
+++ b/art.css
@@ -10,12 +10,12 @@
 
 /* Styling for the header */
 .header {
-    background-color: #333;
+    background-color: #ffffff;
     padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
 }
 
 /* Styling for the logo link */
@@ -131,7 +131,7 @@
 .subject-tab {
     font-family: Georgia, serif;
     font-size: 14px; /* Adjust the font size */
-    color: white;
+    color: rgb(0, 0, 0);
     padding: 5px 10px; /* Adjust the padding */
     margin: 0 5px; /* Adjust the margin */
     cursor: pointer;
