--- a/main.css
+++ b/main.css
@@ -14,14 +14,20 @@ body {
 /* Header styles */
 .header {
     background-color: #ffffff;
-    color: white;
-    padding: 20px 0;
+    color: rgb(0, 0, 0);
+    padding: 5px 0;
     text-align: center;
+    border-bottom: 1px solid #000000;
+    margin-bottom: 0px; /* Adjust as needed */
+    padding-bottom: 0px; /* Adjust as needed */
 }
 
 .header h1 {
     font-size: 36px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #dadada;
+    margin-bottom: 0px; /* Adjust as needed */
+    padding-bottom: 0px; /* Adjust as needed */
 }
 
 /* Subject tabs */
@@ -29,19 +35,20 @@ body {
     background-color: #ffffff;
     display: flex;
     justify-content: space-around;
-    padding: 10px 0;
+    padding: 20px 0;
+  
 }
 
 .subject-tab {
     color: rgb(0, 0, 0);
     text-decoration: none;
-    padding: 8px 15px;
+    padding: 4px 15px;
     border-radius: 5px;
     transition: background-color 0.3s;
 }
 
 .subject-tab:hover {
-    background-color: #b4b4b4;
+    background-color: #e4e4e4;
 }
 
 /* Logo styles */
@@ -51,6 +58,9 @@ body {
     vertical-align: middle;
     width: auto;
     max-width: 100%;
+    border-bottom: 1px solid #ebebeb;
+    margin-bottom: 0px; /* Adjust as needed */
+    padding-bottom: 0px; /* Adjust as needed */
 }
 
 
@@ -110,4 +120,28 @@ body {
     background-color: #0056b3;
 }
 
+/* Header Content Styles */
+.header-content {
+    text-align: center;
+    padding: 0px 0;
+}
+
+.header-content h1 {
+    font-size: 25px;
+    margin-bottom: 10px;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: space-around;
+    padding: 20px 0;
+}
+
+
+.date {
+    font-size: 16px;
+    color: rgb(58, 58, 58);
+    text-decoration: none;
+    padding: 4px 15px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
 
