--- a/main.css
+++ b/main.css
@@ -259,3 +259,117 @@ body {
 
 
 
+
+
+
+
+
+
+/* Footer styles */
+.footer {
+    font-family: Arial, sans-serif;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: #ffffff; /* Match your website's color scheme */
+    color: #000000; /* Text color */
+}
+
+.footer-left {
+    font-family: Arial, sans-serif;
+
+    flex: 1;
+}
+
+.footer-logo {
+    font-family: Arial, sans-serif;
+
+    max-width: 100px;
+    height: auto;
+}
+
+.footer-right {
+    font-family: Arial, sans-serif;
+
+    flex: 2;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.footer-categories {
+    font-family: Arial, sans-serif;
+
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.footer-categories li {
+    font-family: Arial, sans-serif;
+
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-categories a {
+    font-family: Arial, sans-serif;
+
+    text-decoration: none;
+    color: #000000; /* Text color */
+    font-weight: bold;
+}
+
+.about-button,
+.email-button {
+    font-family: Arial, sans-serif;
+
+    padding: 10px 20px;
+    border: none;
+    background-color: #f7f7f7; /* Button color */
+    color: #000000;
+    border-radius: 5px;
+    margin-left: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.about-button:hover,
+.email-button:hover {
+    font-family: Arial, sans-serif;
+
+    background-color: #ffffff; /* Button color on hover */
+}
+
+
+
+/* Small header styles */
+/* Small header styles */
+/* Small header styles */
+/* Small header styles */
+.small-header {
+    display: flex;
+    justify-content: center; /* Center the buttons horizontally */
+    align-items: center;
+    padding: 10px 0; /* Adjust padding for vertical alignment */
+    background-color: #ffffff; /* Match your website's color scheme */
+    border-bottom: 1px solid #ccc; /* Add a thin border at the bottom */
+    color: #000000; /* Text color */
+}
+
+.small-button {
+    padding: 10px 20px;
+    border: none;
+    background-color: #ffffff; /* Button color */
+    color: #000000;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin: 0 10px; /* Add margin for spacing between buttons */
+}
+
+.small-button:hover {
+    background-color: #e7e7e7; /* Button color on hover */
+}
