--- a/main.css
+++ b/main.css
@@ -354,7 +354,7 @@ body {
     justify-content: center; /* Center the buttons horizontally */
     align-items: center;
     padding: 10px 0; /* Adjust padding for vertical alignment */
-    background-color: #f5f5f5; /* Match your website's color scheme */
+    background-color: #ffffff; /* Match your website's color scheme */
     border-bottom: 1px solid #f0f0f0; /* Add a thin border at the bottom */
     color: #000000; /* Text color */
 }
