--- a/art.css
+++ b/art.css
@@ -237,3 +237,17 @@
 
     background-color: #0052c5; /* Button color on hover */
 }
+
+
+@media (max-width: 400px) {
+    .articles {
+        flex-direction: column;
+        align-items: center; /* Center aisles on smaller screens */
+    }
+
+    .wide-aisle, .narrow-aisle, .aisle-separator {
+        flex: auto;
+        width: 100%; /* Reset widths for smaller screens */
+        margin: 0; /* Reset margins for smaller screens */
+    }
+}
