--- a/main.css
+++ b/main.css
@@ -419,6 +419,6 @@ margin-right: 20px;
         bottom: 0;
         width: 100%;
         height: 5px; /* Adjust the height as needed */
-
+padding: 25px;
     }
 }
