--- a/about.css
+++ b/about.css
@@ -310,10 +310,7 @@
 
 @media (max-width: 600px) {
     .footer {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
+        margin-top: 20px; /* Add some space above the footer on small screens */
     }
 }
 
